Update sport-betting-strat.ipynb on performance
Update on performance

--- a/sport-betting-strat.ipynb
+++ b/sport-betting-strat.ipynb
@@ -5,7 +5,7 @@
    "id": "4c99369c",
    "metadata": {},
    "source": [
-    "# Paired Parlay Strategy\n",
+    "# Paired Parlay Strategy V1 (Not that good)\n",
     "- This strategy is meant to try and find +EV parlay pairs using dependent stats on a single player\n",
     "- TODO: Implement a etter lines approximation, currently just a running mean weighted towards the latest result (historical approximation)"
    ]
